Connected Host und Spaces Table   - Side effect was that one now needs to log in to post!   - added spec for the space index page   - edited space controller   - edited space and user model to add one to many support

--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -3,5 +3,6 @@
 <ul>
   <% @spaces.each do |space| %>
   <li>Space name: <%= space.name %></li>
+  <li>Username: <%=space.user.username %></li>
   <% end %>
 </ul>
