--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -1,4 +1,6 @@
 <form action="/spaces/new" method="post">
-  <input type="text" name="space_name" placeholder="Enter space name here">
+  <input type="text" name="space_name" placeholder="Enter name">
+  <input type="text" name="space_description" placeholder="Enter description">
+  <input type="text" name="space_price" placeholder="Enter price in £">
   <button type="submit">Submit</button>
 </form>
