Added feature tests for navbar. Fixed broken register button.

--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -1,3 +1,5 @@
+<h1>Register</h1>
+
 <form action='/user/new' method=post>
   Name: <input type='text' name='name' value ='<%= @user.name %>' >
   Usernamer: <input type='text' name='username' value='<%= @user.username %>' >
