--- a/app/views/_navbar.erb
+++ b/app/views/_navbar.erb
@@ -1,22 +1,22 @@
 <% if current_user %>
    Welcome <%= current_user.name %>
 
-       <form action='/session' method=post>
+       <form action='/session' method="post">
          <input type='hidden' name='_method' value='delete'>
-         <input class="button" type='submit' value="Sign out"/>
+         <button type="submit">Sign out</button>
        </form>
 
   <%else%>
 
 
        <form action='/session/new'>
-         <input class="button" type='submit' value="Login">
+         <button type="submit">Log in</button>
        </form>
 
 
 
-       <form action='/user'>
-         <input class="button" type='submit' value="Register">
+       <form action='/user/new'>
+         <button type="submit">Register</button>
        </form>
 
 <%end%>
