--- a/app/views/session/new.erb
+++ b/app/views/session/new.erb
@@ -1,4 +1,4 @@
-
+<h1>Log in</h1>
 <form action='/session/new' method ='post'>
   E-Mail: <input type='email' name='email'>
   Password: <input type='password' name='password'>
