--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -1,3 +1,5 @@
+New space
+
 <form action="/spaces/new" method="post">
   <input type="text" name="space_name" placeholder="Enter space name here">
   <button type="submit">Submit</button>
