update input field and visual to enter/display availability as a string

--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -4,5 +4,6 @@ New space
   <input type="text" name="space_name" placeholder="Enter name">
   <input type="text" name="space_description" placeholder="Enter description">
   <input type="text" name="space_price" placeholder="Enter price in £">
+  <input type="text" name="space_availability" placeholder="Enter availability">
   <button type="submit">Submit</button>
 </form>
