--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -6,6 +6,7 @@
     Name: <%= space.name %><br>
     Description: <%= space.description %><br>
     Price: <%= "£%.2f" % space.price %><br>
+    Available: <%= space.availability %><br>
     Username: <%=space.user.username %><br>
   </li>
   <% end %>
