update model and forms to work with Date class

--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -4,6 +4,8 @@ New space
   <input type="text" name="space_name" placeholder="Enter name">
   <input type="text" name="space_description" placeholder="Enter description">
   <input type="text" name="space_price" placeholder="Enter price in £">
-  <input type="text" name="space_availability" placeholder="Enter availability">
+
+  <label>Please enter the date your space is available</label>
+  <input type="text" name="space_availability" placeholder="Eg 11/12/16">
   <button type="submit">Submit</button>
 </form>
