Host can see booking confirmation message

--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -5,5 +5,10 @@
   <li>Guest info:  <%= User.get(booking.guest_id).name %> </li>
   <li>Status:  <%= booking.status %> </li>
   <li>Date requested:  <%= booking.date_requested %> </li>
+  <li>
+    <form action="/requests" method="post">
+      <button type="submit" name="confirmed">Confirm</button>
+    </form>
+  </li>
   <% end %>
 </ul>
