change booking status in database when confirm button is clicked

--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -7,6 +7,7 @@
   <li>Date requested:  <%= booking.date_requested %> </li>
   <li>
     <form action="/requests" method="post">
+      <input type="hidden" name="booking_id" value="<%= booking.id %>">
       <button type="submit" name="confirmed">Confirm</button>
     </form>
   </li>
