--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -1,15 +1,17 @@
 <h1>Requests</h1>
 <ul>
   <% @bookings.each do |booking| %>
-  <li>Property name:  <%= Space.get(booking.space_id).name %> </li>
-  <li>Guest info:  <%= User.get(booking.guest_id).name %> </li>
-  <li>Status:  <%= booking.status %> </li>
-  <li>Date requested:  <%= booking.date_requested %> </li>
-  <li>
-    <form action="/requests" method="post">
-      <input type="hidden" name="booking_id" value="<%= booking.id %>">
-      <button type="submit" name="confirmed">Confirm</button>
-    </form>
-  </li>
+    <li>Property name:  <%= Space.get(booking.space_id).name %> </li>
+    <li>Guest info:  <%= User.get(booking.guest_id).name %> </li>
+    <li>Status:  <%= booking.status %> </li>
+    <li>Date requested:  <%= booking.date_requested %> </li>
+    <% unless booking.status == 'Confirmed' %>
+      <li>
+        <form action="/requests" method="post">
+          <input type="hidden" name="booking_id" value="<%= booking.id %>">
+          <button type="submit" name="confirmed">Confirm</button>
+        </form>
+      </li>
+    <% end %>
   <% end %>
 </ul>
