--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -1,6 +1,10 @@
 <h1>Current Spaces available</h1>
 
 <ul>
+  <form action='/spaces' method="get">
+    <input type='date' name='filter_date'>
+    <input type='submit' name='filter_date' value='Filter Date'>
+  </form>
   <% @spaces.each do |space|
         space_bookings = @bookings.all(space_id: space.id) || []
         unless space_bookings.any? { |booking| booking.status=="confirmed" } %>
