Added decline button
- Changed wording in request_dashboard_spec to clearify if referring to host or guest
- Duplicated the "confirm" button test to test the behaviour of decline button
- Solved bug, that would display bookings that were missing a date.

--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -1,17 +1,26 @@
 <h1>Requests</h1>
 <ul>
-  <% @host_requests.each do |host_requests| %>
-    <li>Property name:  <%= Space.get(host_requests.space_id).name %> </li>
-    <li>Guest info:  <%= User.get(host_requests.guest_id).name %> </li>
-    <li>Status:  <%= host_requests.status %> </li>
-    <li>Date requested:  <%= host_requests.date_requested %> </li>
-    <% unless host_requests.status == 'Confirmed' %>
-      <li>
-        <form action="/requests" method="post">
-          <input type="hidden" name="host_request_id" value="<%= host_requests.id %>">
-          <button type="submit" name="confirmed">Confirm</button>
-        </form>
-      </li>
+  <% @host_requests.each do |host_request| %>
+    <% if host_request.date_requested%>
+      <li>Property name:  <%= Space.get(host_request.space_id).name %> </li>
+      <li>Guest info:  <%= User.get(host_request.guest_id).name %> </li>
+      <li>Status:  <%= host_request.status %> </li>
+      <li>Date requested:  <%= host_request.date_requested %> </li>
+      <% unless (host_request.status == 'Confirmed') || (host_request.status == 'Declined') %>
+        <li>
+          <form action="/requests" method="post">
+            <input type="hidden" name="host_request_id" value="<%= host_request.id %>">
+            <button type="submit" name="confirmed" value="true">Confirm</button>
+          </form>
+        </li>
+
+        <li>
+          <form action="/requests" method="post">
+            <input type="hidden" name="host_request_id" value="<%= host_request.id %>">
+            <button type="submit" name="declined" value="false">Decline</button>
+          </form>
+        </li>
+      <% end %>
     <% end %>
   <% end %>
 </ul>
