--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -4,7 +4,7 @@
   <form action="/spaces" method="get">
     Displaying Spaces available on <%= @display_date %>, select another date:<br>
     <input type="date" name="filter_date">
-    <button type="submit" name="submit">Filter Date</button>
+    <button type="submit" id="filter_date" name="submit">Filter Date</button>
   </form>
   <% @spaces.each do |space|
         space_bookings = @bookings.all(space_id: space.id) || []
