--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -6,5 +6,5 @@
   E-Mail: <input type='email' name='email' value='<%= @user.email%>' >
   Password: <input type='password' name='password' required>
   Confirm Password <input type='password' name='password_confirm' required>
-  <input type='submit' value='Sign up'>
+  <input type='submit' id='sign_up' value='Sign up'>
 </form>
