refactor add_space_spec

--- a/app/views/_navbar.erb
+++ b/app/views/_navbar.erb
@@ -7,7 +7,7 @@
     </form>
 
     <form action='/spaces/new' method="get">
-        <button type="submit">Create space</button>
+        <button type="submit" id="create_space">Create space</button>
     </form>
 
   <%else%>
