fixed main comments

--- a/app/views/bookings/new.erb
+++ b/app/views/bookings/new.erb
@@ -2,5 +2,5 @@
 
 <form action="/bookings" method="post">
   <input type="text" name="date_requested" placeholder="01/01/2016">
-  <input type="submit" value="Submit">
+  <button type="submit">Submit</button>
 </form>
