--- a/app/views/session/new.erb
+++ b/app/views/session/new.erb
@@ -2,5 +2,5 @@
 <form action='/session/new' method ='post'>
   E-Mail: <input type='email' name='email'>
   Password: <input type='password' name='password'>
-  <input type='submit' id='sign_in' value='Sign in'>
+  <button type='submit'>Sign in</button>
 </form>
