--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -1,4 +1,8 @@
 <h1>Requests</h1>
+
+<h2>Requests I've made</h2>
+
+<h2>Requests I've received</h2>
 <ul>
   <% @host_requests.each do |host_request| %>
     <% if host_request.date_requested%>
