--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -2,25 +2,30 @@
 
 <ul>
   <form action="/spaces" method="get">
-    Displaying spaces available on <%= @display_date %>, select another date:<br>
-    <input type="date" name="filter_date">
+    Filter by date<br>
+    <input type="date" name="filter_date" placeholder="<%@filter_date%>">
     <button type="submit">Filter date</button>
+  
   </form>
   <% @spaces.each do |space|
         space_bookings = @bookings.all(space_id: space.id) || []
         not_confirmed = space_bookings.all? { |booking| booking.status != "confirmed" }
         available = @filter_date ? space.available_date == @filter_date : true
+        
         if not_confirmed && available %>
           <li>
             Name: <%= space.name %><br>
             Description: <%= space.description %><br>
             Price: <%= "£%.2f" % space.price %><br>
-            Available: <%= space.available_date %><br>
+            Available Dates: <%= space.start_availability%><br>
+            Available Dates: <%= space.end_availability%><br>
             Username: <%=space.user.username %><br>
+
             <form action="/bookings/new" method="post">
               <input type="hidden" name="space_id" value="<%= space.id %>">
               <input type="submit" name="<%= space.id %>" value="Book now">
             </form>
+
           </li>
         <% end %>
   <% end %>
