--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -6,6 +6,7 @@ New space
   <input type="text" name="space_price" placeholder="Enter price in £">
 
   <label>Please enter the date your space is available</label>
-  <input type="text" name="space_availability" placeholder="Eg 11/12/16">
+  <input type="text" name="start_availability" placeholder="01/06/2016">
+  <input type="text" name="end_availability" placeholder="31/08/2016">
   <button type="submit">Submit</button>
 </form>
