adjust request view to work with start and end date

--- a/app/views/bookings/new.erb
+++ b/app/views/bookings/new.erb
@@ -1,6 +1,7 @@
 <h1>Please select a date for your booking.</h1>
 
 <form action="/bookings" method="post">
-  <input type="text" name="date_requested" placeholder="01/01/2016">
+  <input type="text" name="booking_start" placeholder="01/01/2016">
+  <input type="text" name="booking_end" placeholder="01/01/2016">
   <button type="submit">Submit</button>
 </form>
