--- a/app/views/request/index.erb
+++ b/app/views/request/index.erb
@@ -1,11 +1,11 @@
 <h1>Requests</h1>
 <ul>
   <% @host_requests.each do |host_request| %>
-    <% if host_request.booking_start && host_request.booking_end %>
+    <% if host_request.date_requested%>
       <li>Property name:  <%= Space.get(host_request.space_id).name %> </li>
       <li>Guest info:  <%= User.get(host_request.guest_id).name %> </li>
       <li>Status:  <%= host_request.status.capitalize %> </li>
-      <li>Requested from:  <%= host_request.booking_start %> until <%= host_request.booking_end %>  </li>
+      <li>Date requested:  <%= host_request.booking_start %> </li>
       <% unless (host_request.status == 'confirmed') || (host_request.status == 'declined') %>
         <li>
           <form action="/requests" method="post">
