--- a/app/views/_navbar.erb
+++ b/app/views/_navbar.erb
@@ -1,23 +1,28 @@
-<% if current_user %>
-   Welcome <%= current_user.name %>
-
-    <form action='/session' method="post">
-      <input type='hidden' name='_method' value='delete'>
-      <button type="submit">Sign out</button>
-    </form>
-
-    <form action='/spaces/new' method="get">
-        <button type="submit" id="create_space">Create space</button>
-    </form>
-
+<nav class="navbar">
+  <% if current_user %>
+    <section class="navbar-welcome">
+      Welcome <%= current_user.name %>
+    </section>
+    
+    <section>
+      <form action='/session' method="post">
+        <input type='hidden' name='_method' value='delete'>
+        <button type="submit">Sign out</button>
+      </form>
+      <form action='/spaces/new' method="get">
+          <button type="submit" id="create_space">Create space</button>
+      </form>
   <%else%>
+    <section class="navbar-nav">
+     <form action='/session/new'>
+       <button type="submit">Log in</button>
+     </form>
 
-   <form action='/session/new'>
-     <button type="submit">Log in</button>
-   </form>
+     <form action='/user/new'>
+       <button type="submit">Register</button>
+     </form>
+  <%end%>
+</section>
 
-   <form action='/user/new'>
-     <button type="submit">Register</button>
-   </form>
 
-<%end%>
+</nav>
