--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="<%=url('main.css')%>"/>
-    <title>TEMP TITLE SO AWESOME</title>
+    <link rel="stylesheet" type="text/css" href="/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="/main.css"/>
+    <title>Makers BnB</title>
   </head>
   <body>
-
-
-  <div id="navbar">
     <%=partial :navbar %>
-  </div>
-  <div id="peeps">
     <%=partial :flash%>
-</div>
     <%= yield %>
-
   </body>
 </html>
