--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -1,3 +1,5 @@
+
+
 <h1>Current spaces available</h1>
 
   <form action="/spaces" method="get">
@@ -6,17 +8,26 @@
     <button type="submit">Filter date</button>
   </form>
 
+
+
 <ul>
   <% @spaces.each do |space|
-      booked_spaces = @bookings.all(space_id: space.id) || []
-      not_confirmed = booked_spaces.all? { |booking| booking.status != "confirmed" }
-      
 
-      available = @filter_date ? space.start_availability == @filter_date : true        
+        booked_dates = []  
+        space.bookings.each {|booking| booked_dates << get_date_range(booking.booking_start, booking.booking_end) }
+        
+        original_dates = get_date_range(space.start_availability, space.end_availability)
+        available_dates = original_dates.reject{|date| booked_dates.include?(date)}
 
-    if not_confirmed && available %>
+
+        available = @filter_range ? @filter_range.all? {|date| !available_dates.include? date} : true
+    
+  
+    %>
+
+     <% if available %>
       <li>
-
+     
         Name: <%= space.name %><br>
         Description: <%= space.description %><br>
         Price: <%= "£%.2f" % space.price %><br>
