fixed all tests

--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -20,7 +20,7 @@
             <button type="submit" name="declined" value="false">Decline</button>
           </form>
         </li>
-      <% end %>
+      <% end %>r
     <% end %>
   <% end %>
 </ul>
