--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/reset.css"/>
     <link rel="stylesheet" type="text/css" href="/main.css"/>
     <title>Makers BnB</title>
@@ -8,6 +10,9 @@
   <body>
     <%=partial :navbar %>
     <%=partial :flash%>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
