--- a/app/views/bookings/new.erb
+++ b/app/views/bookings/new.erb
@@ -1,7 +1,56 @@
 <h1>Please select a date for your booking.</h1>
 
 <form action="/bookings" method="post">
-  <input type="text" name="booking_start" placeholder="01/01/2016">
-  <input type="text" name="booking_end" placeholder="01/01/2016">
-  <button type="submit">Submit</button>
+  <input type="hidden" name="booking_start">
+  <input type="hidden" name="booking_end">
+  <div id="reportrange" class="text-center">
+      <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
+      <span></span> <b class="caret"></b>
+  </div>
+  <button type="submit">Submit Request</button>
 </form>
+
+<style>
+  #reportrange{
+    background-color: #ffffff;
+    padding: 5px 10px;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    width: 30%;
+  }
+</style>
+
+<script>
+$(document).ready(function(){
+    $(function() {
+
+        function cb(start, end) {
+            $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+            $('input[name="booking_start"]').val(start.format('YYYY-MM-DD'));
+            $('input[name="booking_end"]').val(end.format('YYYY-MM-DD'));
+            console.log("this is the start date")
+            console.log(start.format('MMMM D, YYYY'))
+        }
+        cb(moment().subtract(29, 'days'), moment());
+
+        $('#reportrange').daterangepicker({
+            "locale": {
+                "format": "DD/MM/YYYY",
+                "separator": " - ",
+                "applyLabel": "Select dates",
+                "cancelLabel": "Clear"
+            },
+        		"isInvalidDate": function(date){
+            var test_date = date._d.getTime();
+            var blocked_date = (new Date(Date.parse("2016-01-04"))).getTime();
+            	if(test_date === blocked_date) {
+              	return true;
+              }
+              	console.log(test_date)
+                console.log(blocked_date)
+          },
+          }, cb);
+
+    });
+  });
+</script>
