adjusted two tests in request_to_book_spec that had been affected by hiding the date input form fields that allowed for the bootstrap datepicker

--- a/app/views/bookings/new.erb
+++ b/app/views/bookings/new.erb
@@ -1,8 +1,8 @@
 <h1>Please select a date for your booking.</h1>
 
 <form action="/bookings" method="post">
-  <input type="hidden" name="booking_start">
-  <input type="hidden" name="booking_end">
+  <input id="booking_start" type="hidden" name="booking_start">
+  <input id="booking_end" type="hidden" name="booking_end">
   <div id="reportrange" class="text-center">
       <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
       <span></span> <b class="caret"></b>
