--- a/app/public/main.css
+++ b/app/public/main.css
@@ -6,6 +6,7 @@ body {
   background-color: rgb(255, 255, 255);
   line-height: 1.6em;
   font-family: 'Cardo', serif;
+  color: rgb(119, 119, 119);
 }
 
 .container {
@@ -21,6 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
   margin: 15px 0;
+  color: rgb(75, 75, 75);
 }
 
 
@@ -33,6 +35,7 @@ h1 {
 
 .navbar {
   font-family: 'Montserrat', sans-serif;
+  color: rgb(75, 75, 75);
   position: fixed;
   width: 100%;
   background-color: rgb(218, 229, 251);
@@ -90,4 +93,41 @@ h1 {
 
 .error {
   background-color: rgb(217, 83, 79);
+}
+
+/* FORMS */
+
+.form {
+  font-family: 'Montserrat', sans-serif;
+  width: 23em;
+  vertical-align: middle;
+  text-align: right;
+  margin: 0 auto;
+}
+
+.form input {
+  padding: 10px 10px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 3px #ddd;
+  border-radius: 4px;
+  vertical-align: middle;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 1em;
+  font-weight: 300;
+  color: rgb(119, 119, 119);
+
+}
+
+.btn {
+  padding: 10px 10px;
+  margin: 5px;
+  font-size: 1em;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 4px;
+  background-color: rgb(218, 229, 251);
+  border: 0px;
+  color: rgb(75, 75, 75);
 }
