--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -15,14 +15,13 @@
 
         booked_dates = []  
         space.bookings.each {|booking| booked_dates << get_date_range(booking.booking_start, booking.booking_end) }
-        
+        booked_dates.flatten!
+
         original_dates = get_date_range(space.start_availability, space.end_availability)
         available_dates = original_dates.reject{|date| booked_dates.include?(date)}
 
 
-        available = @filter_range ? @filter_range.all? {|date| !available_dates.include? date} : true
-    
-  
+        available = @filter_range ? @filter_range.all? {|date| available_dates.include? date} : true  
     %>
 
      <% if available %>
