--- a/app/views/spaces/index.erb
+++ b/app/views/spaces/index.erb
@@ -14,8 +14,11 @@
   <% @spaces.each do |space|
 
         booked_dates = []  
-        space.bookings.each {|booking| booked_dates << get_date_range(booking.booking_start, booking.booking_end) }
-        booked_dates.flatten!
+        space.bookings.each do |booking| 
+          if booking.booking_start
+            booked_dates += get_date_range(booking.booking_start, booking.booking_end) 
+          end
+        end
 
         original_dates = get_date_range(space.start_availability, space.end_availability)
         available_dates = original_dates.reject{|date| booked_dates.include?(date)}
