--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <!-- move script to footer once calendar picker script is moved out of view -->
     <script src="https://cdn.jsdelivr.net/jquery/1/jquery.min.js"></script>
+    <script src="<%=url('interface.js')%>"></script>
 
     <link rel="stylesheet" type="text/css" href="<%=url('main.css')%>"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/bootstrap/latest/css/bootstrap.css"/>
