--- a/app/views/_navbar.erb
+++ b/app/views/_navbar.erb
@@ -8,7 +8,7 @@
 
       <% unless current_path == '/spaces' %>
       <form action='/spaces' method="get">
-          <button type="submit">Available spaces</button>
+          <button type="submit">Spaces</button>
       </form>
       <%end%>
 
