--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,7 +10,7 @@
   <body>
     <%=partial :navbar %>
     <%=partial :flash%>
-    <div class="container flex">
+    <div class="container">
       <%= yield %>
     </div>
 
