--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -1,49 +1,58 @@
 <h1>Requests</h1>
 
-<h2>Requests I've made</h2>
-<ul>
-  <% if @guest_requests.empty? %>
-    <li>It seems like you haven't made any request yet</li>
-  <% else %>
-    <% @guest_requests.each do |guest_request| %>
-      <% if guest_request.date_requested%>
-        <li>Property name:  <%= Space.get(guest_request.space_id).name %> </li>
-        <li>Host info:  <%= User.get(guest_request.host_id).name %> </li>
-        <li>Status:  <%= guest_request.status.capitalize %> </li>
-        <li>Date requested:  <%= guest_request.date_requested %> </li>
+<div class="flexbox">
+  <section class="boxitem">
+    <h2>Requests I've made</h2>
+      <% if @guest_requests.empty? %>
+        <ul>
+          <li>It seems like you haven't made any request yet</li>
+        </ul>
+      <% else %>
+        <% @guest_requests.each do |guest_request| %>
+          <ul class="request">
+            <% if guest_request.date_requested%>
+              <li><strong>Property</strong> <%= Space.get(guest_request.space_id).name %> </li>
+              <li><strong>Host</strong> <%= User.get(guest_request.host_id).name %> </li>
+              <li><strong>Status</strong> <%= guest_request.status.capitalize %> </li>
+              <li><strong>Date requested</strong>  <%= guest_request.date_requested %> </li>
+            <% end %>
+          </ul>
+        <% end %>
       <% end %>
-    <% end %>
-  <% end %>
-</ul>
+  </section>
 
+  <section class="boxitem">
+    <h2>Requests I've received</h2>
 
-<h2>Requests I've received</h2>
-<ul>
-  <% if @host_requests.empty? %>
-    <li>It seems like you haven't received any request yet</li>
-  <% else %>
-    <% @host_requests.each do |host_request| %>
-      <% if host_request.date_requested%>
-        <li>Property name:  <%= Space.get(host_request.space_id).name %> </li>
-        <li>Guest info:  <%= User.get(host_request.guest_id).name %> </li>
-        <li>Status:  <%= host_request.status.capitalize %> </li>
-        <li>Date requested:  <%= host_request.date_requested %> </li>
-        <% unless (host_request.status == 'confirmed') || (host_request.status == 'declined') %>
-          <li>
-            <form action="/requests" method="post">
-              <input type="hidden" name="host_request_id" value="<%= host_request.id %>">
-              <button type="submit" name="confirmed" value="true">Confirm</button>
-            </form>
-          </li>
+      <% if @host_requests.empty? %>
+        <ul>
+          <li>It seems like you haven't received any request yet</li>
+        </ul>
+      <% else %>
+        <% @host_requests.each do |host_request| %>
+          <% if host_request.date_requested%>
+            <ul class="request">
+              <li><strong>Property</strong> <%= Space.get(host_request.space_id).name %> </li>
+              <li><strong>Guest</strong> <%= User.get(host_request.guest_id).name %> </li>
+              <li><strong>Status</strong> <%= host_request.status.capitalize %> </li>
+              <li><strong>Date requested</strong> <%= host_request.date_requested %> </li>
+              <% unless (host_request.status == 'confirmed') || (host_request.status == 'declined') %>
+              <li class="flexbox">
+                <form class="inline" action="/requests" method="post">
+                  <input type="hidden" name="host_request_id" value="<%= host_request.id %>">
+                  <button class="btn" type="submit" name="confirmed" value="true">Confirm</button>
+                </form>
+                <form class="inline" action="/requests" method="post">
+                  <input type="hidden" name="host_request_id" value="<%= host_request.id %>">
+                  <button class="btn" type="submit" name="declined" value="false">Decline</button>
+                </form>
+              </li>
+              <% end %>
+            </ul>
 
-          <li>
-            <form action="/requests" method="post">
-              <input type="hidden" name="host_request_id" value="<%= host_request.id %>">
-              <button type="submit" name="declined" value="false">Decline</button>
-            </form>
-          </li>
         <% end %>
       <% end %>
     <% end %>
-  <% end %>
-</ul>
+
+  </section>
+</div>
