tweak index.html to be close to the spec, fix tests

--- a/app/views/_navbar.erb
+++ b/app/views/_navbar.erb
@@ -15,7 +15,7 @@
 
       <% unless current_path == '/requests' %>
         <form action='/requests'>
-          <button type="submit">Check requests</button>
+          <button type="submit">Requests</button>
         </form>
       <%end%>
 
